tests/ui/feature-gates/feature-gate-asm-flagout.stderr
error[E0658]: flagout operands for inline assembly are unstable
  --> $DIR/feature-gate-asm-flagout.rs:9:17
   |
LL |                 flagout("c") carry,
   |                 ^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(asm_flagout)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
